--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "urlshortner",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "start": "nodemon start"
@@ -9,8 +8,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-openid-connect": "github:auth0/express-openid-connect",
     "mongoose": "^6.3.4",
-    "nodemon": "^2.0.16"
-  }
+    "nodemon": "^2.0.16",
+    "router": "^1.3.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Venom789/urlShortner.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Venom789/urlShortner/issues"
+  },
+  "homepage": "https://github.com/Venom789/urlShortner#readme",
+  "description": ""
 }
