change base url

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DB_USER=Venom789
 DB_PASSWORD=222222222
 
 SECRET=KDFJ89978FASHKJLDFH584#%%fjni&^^&ugjhr%fyvh965165AFASJ723HJNSAFJKHSDFLHASLJKDFAHJLFH2555XXXBSED
-BASE_URL=http://localhost:3000
+BASE_URL=https://urls4.herokuapp.com/
 ISSUER_BASE_URL=https://deep98akash.us.auth0.com
 CLIENT_ID=a2DJzcMC3fb9FAfbQFcDgP56bip5Ngb1
 ADMIN_EMAIL=deep98akash@gmail.com
